vitrail-pg-macros/tests/ui/fail/query_without_variables.stderr
error[E0271]: type mismatch resolving `<UserById as QueryModel>::Variables == ()`
  --> tests/ui/fail/query_without_variables.rs:30:42
   |
30 |     let _ = crate::query_schema::query::<UserById>();
   |                                          ^^^^^^^^ type mismatch resolving `<UserById as QueryModel>::Variables == ()`
   |
note: expected this to be `()`
  --> tests/ui/fail/query_without_variables.rs:21:17
   |
21 |     variables = UserByIdVariables,
   |                 ^^^^^^^^^^^^^^^^^
note: required by a bound in `query_schema::query`
  --> tests/ui/fail/query_without_variables.rs:3:1
   |
 3 | / schema! {
 4 | |     name query_schema
 5 | |
 6 | |     model user {
...  |
10 | | }
   | |_^ required by this bound in `query`
   = note: this error originates in the macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)
